Some small content changes

--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -1,5 +1,5 @@
-\subsection{Praktische Anwendung der FM-Synthese}
+\subsection{Einfache vs. komplexe FM Synthese}
 
-\subsubsection{Nachbildung eines Instruments}
-\subsubsection{Modulationsframework (Theorie -> Praxis)}
-\subsubsection{Demo: Parameter und Effekte - Grafiken (Plotten?!)}
+\subsubsection{Kaskadenschaltung}
+\subsubsection{Parallelschaltung}
+\subsubsection{FM8 - Demo (Auf ADSR/Filter eingehen)}
