--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -1,5 +1,5 @@
 \subsection{Einfache vs. komplexe FM Synthese}
 
-\subsubsection{Kaskadenschaltung}
-\subsubsection{Parallelschaltung}
-\subsubsection{FM8 - Demo (Auf ADSR/Filter eingehen)}
+\subsubsection{Nachbildung eines Instruments}
+\subsubsection{Modulationsframework (Theorie -> Praxis)}
+\subsubsection{Demo: Parameter und Effekte - Grafiken (evtl. Plotten)}
