fixed section 2.4 Praktische Anwendung der FM Synthese

--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -1,4 +1,4 @@
-\subsection{Einfache vs. komplexe FM Synthese}
+\subsection{Praktische Anwendung der FM-Synthese}
 
 \subsubsection{Nachbildung eines Instruments}
 \subsubsection{Modulationsframework (Theorie -> Praxis)}
