--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -9,6 +9,8 @@
 \usepackage{amsmath}
 \usepackage{bibgerm}
 
+\graphicspath{{./Kapitel/img/}}
+
 %%%
 %%% Style-Definition des Literaturverzeichnis
 %%%
