--- a/Dok/Kapitel/BesonderheitenFmSynthese.tex
+++ b/Dok/Kapitel/BesonderheitenFmSynthese.tex
@@ -1,7 +1,7 @@
 \subsection{Besonderheiten der FM-Synthese}
 
 \subsubsection{Phasenmodulation als FM}
-Frequenzmodulation (FM) und Phasenmodulation (PM) können unter dem Oberbegriff Winkelmodulation zusammen gefasst werden. Wie der Name andeutet wird der Momentanphasenwinkel eines Trägersignales in Abhängigkeit eines Modulationssignals verändert. In der allgemeinsten Form kann ein winkelmoduliertes Signal als Sinusfunktion eines sich zeitlich ändernden Winkels beschrieben werden.
+Frequenzmodulation (FM) und Phasenmodulation (PM) können unter dem Oberbegriff Winkelmodulation zusammen gefasst werden. Wie der Name andeutet wird der Phasenwinkel eines Trägersignales in Abhängigkeit eines Modulationssignals verändert. In der allgemeinsten Form kann ein winkelmoduliertes Signal als Sinusfunktion eines sich zeitlich ändernden Winkels beschrieben werden.
 \begin{equation}
 s(t)=A*sin(\theta(t))
 \end{equation}
@@ -9,11 +9,13 @@ Dabei wird $\theta(t)$ als \textit{momentaner Winkel} bezeichnet und ist als Sum
 \begin{equation}
 \theta(t)=\omega_0t + \varphi(t)
 \end{equation}
-Die erste Ableitung nach der Zeit $\dot{\theta}(t)$ entspricht der \textit{momentan Frequenz} $\omega_m(t)$.
+Die \textit{momentan Frequenz} $\omega_m(t)$ entspricht der Änderung des Phasenwinkels in Abhängigkeit der Zeit. Daher kann die momentan Frequenz durch die erste Ableitung des Phasenwinkels nach der Zeit $\dot \theta(t)$ bestimmt werden.
 \begin{equation}
-\omega_m(t)=\frac{d\theta(t)}{dt}=\frac{d[\omega_0t+\varphi(t)]}{dt}=\frac{d\omega_0t}{dt}+\frac{d\varphi(t)}{dt}=\omega_0+\frac{d\varphi(t)}{dt}
+\omega_m(t)=\dot \theta(t)=\frac{d\theta(t)}{dt}=\frac{d[\omega_0t+\varphi(t)]}{dt}=\frac{d\omega_0t}{dt}+\frac{d\varphi(t)}{dt}=\omega_0+\frac{d\varphi(t)}{dt}
 \end{equation}
-\textbf{ANALOGIE PHYSIK}
+
+
+\textbf{ANALOGIE PHYSIK/BEGRÜNDUNG WARUM ABLEITUNG}
 
 Wird nun die momentane Phase des Trägersignals proportional zum Modulationssignal $p(t)$ verändert, erhält man das \textbf{phasenmodulierte} Signal $s_{PM}(t)$.\\
 Wird jedoch die momentante Frequenz des Trägersignals proportional zum Modulationssignal $f(t)$ verändert, erhält man das \textbf{frequenzmodulierte} Signal $s_{FM}(t)$.
@@ -27,4 +29,8 @@ Mit dieser Erkenntnis ergeben sich für die Phasenmodulation folgende mathematis
 \]
 
 \subsubsection{Seitenfrequenzbänder (Evtl. Besselfunktion)}
+Was sind SFB?
+Warum sind sie wichtig? (Ton Charakter etc)
+Warum treten sie auf?
+Wie berechnet man sie (Fourier Analyse/Bessel Funktion)
 \subsubsection{Harmonische Frequenzverhältnisse(Inkl. Vibrato)}
