--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -8,6 +8,17 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{bibgerm}
+\usepackage{hyperref}
+\usepackage{gensymb}
+\usepackage{listings}
+\lstset{
+	 literate={ö}{{\"o}}1
+           {ä}{{\"a}}1
+           {ü}{{\"u}}1
+	{ß}{{\ss}}1
+	{=}{$\rightarrow{}$}{1},
+  	breaklines=true,                % sets automatic line breaking
+}
 
 \graphicspath{{./Kapitel/img/}}
 
