--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -74,5 +74,5 @@ Die Gleichung für eine frequenzmodulierte Welle lautet wie folgt:
 
 Der Modulationsindex beschreibt also das Verhältnis des Frequenzhubs zur Modulationsfrequenz.
 Man kann anhand der Formel bereits erkennen, dass bei einem Modulationsindex von 0 keine Modulation stattfindet. Dabei wird der Frequenzhub der Modulation auch gleich 0, da $ I=\frac{d}{m} $ und somit $ d = 0*m = 0 $ gilt. 
-$ e(t) = A \sin(\alpha t + 0 \sin(\beta t)) $ > $ e(t) = a \sin(\alpha t) $
-Anhand der Frequenz des Modulators kann man sehen, wie oft der oben beschriebene Frequenzhub pro Sekunde durchlaufen wird. Beispiel: Bei einer Modulator Frequenz von 440 Hz wird der Frequenzhub 440 mal pro Sekunde durchlaufen.
+\[ e(t) = A \sin(\alpha t + 0 \sin(\beta t))  \Rightarrow  e(t) = a \sin(\alpha t) \]
+Anhand der Frequenz des Modulators kann man sehen, wie oft der oben beschriebene Frequenzhub pro Sekunde durchlaufen wird. Beispiel: Bei einer Modulatorfrequenz von 440 Hz wird der Frequenzhub 440 mal pro Sekunde durchlaufen.
