--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -10,6 +10,7 @@
 \usepackage{bibgerm}
 \usepackage{hyperref}
 \usepackage{gensymb}
+\usepackage[section]{placeins}
 \usepackage{listings}
 \lstset{
 	 literate={ö}{{\"o}}1
